--- a/public/posting/index.html
+++ b/public/posting/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>サマリー | 安野たかひろ選挙掲示板マップ</title>
-  <meta property="og:title" content="サマリー | 安野たかひろ選挙掲示板マップ">
+  <title>進捗率確認 | 森ようすけ 東京都第13区ポスティングマップ（足立区東部）</title>
+  <meta property="og:title" content="進捗率確認 | 森ようすけ 東京都第13区ポスティングマップ（足立区東部）">
   <meta property="og:type" content="website">
-  <meta name="keywords" content="安野たかひろ,ポスター,選挙ポスター,東京都知事選挙,都知事選,マップ,地図,掲示板,あんの"/>
+  <meta name="keywords" content="森ようすけ,ポスティング、国民民主党、足立区、もりようすけ、森洋介"/>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
   <link rel="icon" type="image/png" href="/favicon.png">
@@ -15,6 +15,6 @@
 <body>
 <div id="map"></div>
 <script src="/scripts/common.js"></script>
-<script src="/scripts/summary.js"></script>
+<script src="/scripts/posting.js"></script>
 </body>
 </html>
